--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "back",
+  "name": "socialmediabackend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for a social media application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["social-media", "backend", "nodejs", "express"],
+  "author": "Mohamed Grissa",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,7 +17,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.6"
   }
 }
